Add dependecy on org.apache.commons.codec project

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -26,6 +26,7 @@
       <import plugin="org.eclipse.gef"/>
       <import plugin="org.eclipse.jface.text"/>
       <import plugin="org.eclipse.birt.report.data.oda.jdbc"/>
+      <import plugin="org.apache.commons.codec"/>
    </requires>
 
    <extension
