--- a/model/org.eclipse.birt.report.model/plugin.xml
+++ b/model/org.eclipse.birt.report.model/plugin.xml
@@ -10,17 +10,14 @@
       <library name="model.jar">
          <export name="*"/>
       </library>
-      <library name="lib/flute.jar">
-         <export name="*"/>
-      </library>
-      <library name="lib/sac.jar">
-         <export name="*"/>
-      </library>
    </runtime>
    <requires>
       <import plugin="org.eclipse.birt.core"/>
       <import plugin="org.eclipse.birt.data.oda"/>
 	  <import plugin="org.eclipse.datatools.connectivity.oda"/>
+   	  <import plugin="org.apache.commons.codec"/>
+      <import plugin="org.w3c.sac"/>
+      <import plugin="org.mozilla.rhino"/>
    </requires>
    <extension-point id="reportItemModel" name="reportItemModel" schema="schema/reportItem.exsd"/>
    <extension-point id="encryptionHelper" name="encryptionHelper" schema="schema/encryptionHelper.exsd"/>
