checkin partial fix for 129034: Convert plugins to use manifest.mf and single Jar format

--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -28,5 +28,6 @@ dtp.oda.adapter.jar=oda-adapter.jar
 oda.jdbc.jar=oda-jdbc.jar
 oda.flatfile.jar=oda-flatfile.jar
 birt.oda.jar=oda.jar
+bin.includes = META-INF/
 
 
