--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/build.properties
@@ -2,4 +2,5 @@ source.jdbc.jar = src/
 output.jdbc.jar = bin/
 bin.includes = plugin.xml,\
                jdbc.jar,\
-               icons/
+               icons/,\
+               META-INF/
