--- a/data/org.eclipse.birt.report.data.oda.xml.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.xml.ui/build.properties
@@ -2,7 +2,8 @@ source.ui.jar = src/
 output.ui.jar = bin/
 bin.includes = plugin.xml,\
                xmlui.jar,\
-               icons/
+               icons/,\
+               META-INF/
 export.dir=exports
 dir.bin=bin
 dir.src=src
