--- a/data/org.eclipse.birt.report.data.oda.xml/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.xml/build.properties
@@ -1,4 +1,5 @@
 source.xml.jar = src/
 output.xml.jar = bin/
 bin.includes = plugin.xml,\
-               xml.jar
+               xml.jar,\
+               META-INF/
