--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -1,35 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="org.eclipse.birt.report.data.oda.jdbc.ui"
-   name="%plugin.name"
-   version="2.1.0"
-   provider-name="Eclipse.org"
-   class="org.eclipse.birt.report.data.oda.jdbc.ui.JdbcPlugin">
+<plugin>
 
-   <runtime>
-      <library name="jdbc.jar">
-         <export name="*"/>
-      </library>
-   </runtime>
-
-   <requires>
-      <import plugin="org.eclipse.ui"/>
-      <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="org.eclipse.birt.core"/>
-      <import plugin="org.eclipse.birt.report.model"/>
-      <import plugin="org.eclipse.datatools.connectivity.oda.design.ui"/>
-      <import plugin="org.eclipse.core.resources"/>
-      <import plugin="org.eclipse.draw2d"/>
-      <import plugin="org.eclipse.birt.report.designer.core"/>
-      <import plugin="org.eclipse.birt.report.designer.ui"/>
-      <import plugin="org.eclipse.gef"/>
-      <import plugin="org.eclipse.jface.text"/>
-      <import plugin="org.eclipse.birt.report.data.oda.jdbc"/>
-      <import plugin="org.apache.commons.codec"/>
-   </requires>
-
-   <extension
+     <extension
          point="org.eclipse.datatools.connectivity.connectionProfile">
       <category
             id="%oda.parent.category.id"
