--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
@@ -1,28 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="org.eclipse.birt.report.data.oda.jdbc"
-   name="BIRT ODA-JDBC Bridge Driver"
-   version="2.1.0"
-   provider-name="Eclipse.org"
-   class="org.eclipse.birt.report.data.oda.plugin.OdaJdbcPlugin">
-   <runtime>
-      <library name="oda-jdbc.jar">
-         <export name="*"/>
-      </library>
-      <library name="derby.jar">
-         <export name="*"/>
-      </library>
-   </runtime>
-   <requires>
- 	  <import plugin="org.junit" optional="true"/>
-      <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="org.eclipse.birt.core"/>
-      <import plugin="org.eclipse.datatools.connectivity.oda"/>
-      <import plugin="com.ibm.icu"/>
-   </requires>
-   
-   <extension-point id="driverinfo" name="JDBC Driver Information Extension" 
+<plugin>
+     <extension-point id="driverinfo" name="JDBC Driver Information Extension" 
    			schema="schema/driverinfo.exsd"/>
    			
    <extension
