Uses manifest files.

--- a/model/org.eclipse.birt.report.model/.project
+++ b/model/org.eclipse.birt.report.model/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.birt.report.model_bugs</name>
+	<name>org.eclipse.birt.report.model</name>
 	<comment></comment>
 	<projects>
 	</projects>
