--- a/data/org.eclipse.birt.report.data.oda.xml.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.xml.ui/build.properties
@@ -18,5 +18,7 @@ oda.designer.ui.dir=../org.eclipse.datatools.connectivity.oda.design.ui
 oda.designer.ui.jar=odadesignui.jar
 oda.connectivity.ui.dir=../org.eclipse.datatools.connectivity.ui
 oda.connectivity.ui.jar=connectivityui.jar
+oda.designer.dir=../org.eclipse.datatools.connectivity.oda.design
+oda.designer.jar=odadesign.jar
 plugin.jar=xmlui.jar
 db.dir=db
