--- a/docs/org.eclipse.birt.doc/plugin.xml
+++ b/docs/org.eclipse.birt.doc/plugin.xml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="org.eclipse.birt.doc"
-   name="BIRT Documentation"
-   version="2.1.0"
-   provider-name="Eclipse.org">
-   <requires>
-      <import plugin="org.eclipse.help"/>
-   </requires>
-   <extension
+<plugin>
+    <extension
          point="org.eclipse.help.toc">
       <toc
             primary="true"
