Export single jar plugin

--- a/core/org.eclipse.birt.core/build.properties
+++ b/core/org.eclipse.birt.core/build.properties
@@ -1,27 +1,22 @@
-source.core.jar = src/
-output.core.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = plugin.xml,\
-               core.jar,\
+               .,\
+               .options,\
                about.html,\
                META-INF/MANIFEST.MF,\
                about_files/NPL-1.1.html,\
-               schema/FactoryService.exsd,\
-               META-INF/
-src.includes = plugin.xml,\
-               src/,\
-               BuildCore.xml,\
-               test/,\
-               build.properties,\
-               .options,\
+               schema/FactoryService.exsd
+src.includes = META-INF/,\
+			   .options,\
+			   .project,\
+			   .classpath,\
                about.html,\
-               core.jar,\
-               BuildCore.xml,\
+               about_files/,\
                build.properties,\
-               .classpath,\
-               .project,\
-               lib/commons-codec-1.3.jar,\
-               lib/js.jar,\
-               lib/servlet.jar,\
-               schema/FactoryService.exsd,\
-               META-INF/MANIFEST.MF,\
-               about_files/NPL-1.1.html
+               lib/,\
+               plugin.xml,\
+               schema/,\
+               src/,\
+               test/,\
+               BuildCore.xml,\
