--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/build.properties
@@ -19,7 +19,7 @@ oda.jdbc.jar=oda-jdbc.jar
 oda.jdbc.ui.dir=../org.eclipse.birt.report.data.oda.jdbc.ui
 oda.jdbc.ui.jar=jdbc.jar
 designer.ui.dir=../org.eclipse.birt.report.designer.ui
-designer.ui.jar=ui.jar
+designer.ui.jar=*.jar
 sampledb.dir = ../org.eclipse.birt.report.data.oda.sampledb
 sampledb.jar = sampledb.jar
 model.dir=../org.eclipse.birt.report.model
