--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/build.properties
@@ -4,3 +4,25 @@ bin.includes = plugin.xml,\
                jdbc.jar,\
                icons/,\
                META-INF/
+export.dir=exports
+dir.bin=bin
+dir.src=src
+dir.utest=utest
+birt.core.dir=../org.eclipse.birt.core
+birt.core.jar=core.jar
+birt.model.dir=../org.eclipse.birt.report.model
+birt.model.jar=model.jar
+oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
+oda.jdbc.jar=oda-jdbc.jar
+birt.designer.ui.dir=../org.eclipse.birt.report.designer.ui
+birt.designer.ui.jar=ui.jar
+org.apache.commons.codec.dir=../org.apache.commons.codec
+oda.connectivity.ui.dir=../org.eclipse.datatools.connectivity.ui
+oda.connectivity.ui.jar=connectivityui.jar
+oda.designer.dir=../org.eclipse.datatools.connectivity.oda.design
+oda.designer.jar=odadesign.jar
+oda.designer.ui.dir=../org.eclipse.datatools.connectivity.oda.design.ui
+oda.designer.ui.jar=odadesignui.jar
+plugin.jar=jdbcui.jar
+
+               
