--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.properties
@@ -22,6 +22,7 @@ datasource.name=JDBC data source
 dataset.jdbcselect=SQL SELECT via JDBC
 datasource.editor.page.connection=Data source connection
 preference.externalEditor.title=External editor
+preference.datasetpreview=Data Set Editor
 
 plugin.name=BIRT JDBC UI Plug-in
 oda.data.source.name=BIRT JDBC Data Source
