--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -1,4 +1,5 @@
 dataset.editor.page.query=Query
+dataset.new.query=Define a sql query text using available items
 dataset.new=New Data Set
 datasource.new=New Data source
 datasource.editor.page.datasource=Data Source
@@ -97,3 +98,12 @@ driverManagerDialog.text.DriverError=Add Driver Error
 driverManagerDialog.fileDelete.title=File Delete
 driverManagerDialog.fileDelete.text=File will be deleted the next time when BIRT starts. Please be aware of that especially when exchanging different versions of driver.
 datasource.propertyPage.tooltip=JDBC Data Source
+
+designer.preview.preference.resultset.previewpage.group.title=Preview Page
+designer.preview.preference.resultset.maxNoOfSchema.description=Maximum number of &schemas to display:
+designer.preview.preference.resultset.maxNoOfTable.description=Maximum number of &tables in each schema to display:
+designer.preview.preference.resultset.maxNoOfSchema.errormessage=Please enter a number between 0 and {0} for maximum number of schemas.
+designer.preview.preference.resultset.maxNoOfTable.errormessage=Please enter a number between 0 and {0} for maximum number of tables in each schema.
+designer.preview.preference.resultset.maxrow.description=Maximum number of &rows to display:
+designer.preview.preference.resultset.maxrow.errormessage=Please enter a number between 1 and {0} for maximum row.
+designer.preview.preference.resultset.sqldatasetpage.group.title=Query Page
