--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/build.properties
@@ -17,13 +17,11 @@ oda.connectivity.ui.jar=connectivityui.jar
 oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
 oda.jdbc.jar=oda-jdbc.jar
 oda.jdbc.ui.dir=../org.eclipse.birt.report.data.oda.jdbc.ui
-oda.jdbc.ui.jar=jdbc.jar
-designer.ui.dir=../org.eclipse.birt.report.designer.ui
-designer.ui.jar=*.jar
+oda.jdbc.ui.jar=jdbcui.jar
 sampledb.dir = ../org.eclipse.birt.report.data.oda.sampledb
 sampledb.jar = sampledb.jar
-model.dir=../org.eclipse.birt.report.model
-model.jar=model.jar
 plugin.jar=sampledbui.jar
 db.dir=db
 db.name=BirtSample
+oda.designer.dir=../org.eclipse.datatools.connectivity.oda.design
+oda.designer.jar=odadesign.jar
