--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
@@ -38,6 +38,19 @@
    </extension>
 
    <extension
+         point="org.eclipse.ui.propertyPages">
+      <page
+            id="%oda.data.source.id"
+            name="%profile.propertypage.name"
+            class="org.eclipse.birt.report.data.oda.sampledb.ui.profile.SampleDbPropertyPage"
+            objectClass="org.eclipse.datatools.connectivity.IConnectionProfile">
+         <filter
+               name="org.eclipse.datatools.profile.property.id"
+               value="%oda.data.source.id"/>
+      </page>
+   </extension>
+   
+   <extension
          point="org.eclipse.datatools.connectivity.oda.design.ui.dataSource">
       <dataSourceUI id="%oda.data.source.id">
          <newDataSourceWizard
@@ -48,6 +61,7 @@
       </dataSourceUI>
        <dataSetUI id="org.eclipse.birt.report.data.oda.jdbc.JdbcSelectDataSet"
 		       		hasParameterDefinition = "true">
+		    <newDataSetWizard class="org.eclipse.datatools.connectivity.oda.design.ui.wizards.NewDataSetWizard"/>
             <dataSetPage
                   id="org.eclipse.birt.report.data.oda.jdbc.ui.dataset2"
                   wizardPageClass="org.eclipse.birt.report.data.oda.sampledb.ui.SampleDataSetEditor"
