CheckIn:Fix bugzilla bug 131052 Enhancement in Data Access UI

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -25,7 +25,7 @@ tablepage.label.filter=&Filter:
 tablepage.label.refresh=Refreshing...
 tablepage.label.schema=&Schema:
 tablepage.button.filter=&Apply Filter
-tablepage.button.dnd=Use identifier quoting when Drag && Drop
+tablepage.button.dnd=&Use identifier quoting when Drag && Drop
 tablepage.label.filterNote=(The filter supports wildcards. '%' matches zero or more characters. '-' matches one character)
 tablepage.title=Select the tables to appear in the data set.
 tablepage.label.availableItems=Available Items:
@@ -80,14 +80,14 @@ driverManagerDialog.text.jarColumnLocation=Original Location
 driverManagerDialog.message.NotInODADirectory=x - This file does not exist in the ODA JDBC drivers directory.
 driverManagerDialog.message.FileNotExist=* - This file does not exist in the original location.
 driverManagerDialog.message.FileRestored=+ - This file has been restored.
-driverManagerDialog.text.Add=Add...
-driverManagerDialog.text.Restore=Restore
-driverManagerDialog.text.Delete=Delete
+driverManagerDialog.text.Add=&Add...
+driverManagerDialog.text.Restore=&Restore...
+driverManagerDialog.text.Delete=&Delete...
 driverManagerDialog.text.JarFile=JAR Files
 driverManagerDialog.text.driverColumnClassName=Driver Class Name
 driverManagerDialog.text.driverColumnDisplayName=Display Name
 driverManagerDialog.text.driverColumnTemplate=URL Template
-driverManagerDialog.text.Edit=Edit...
+driverManagerDialog.text.Edit=&Edit...
 driverManagerDialog.text.Drivers=Drivers
 driverManagerDialog.text.EditDriverTitle=Edit JDBC Driver
 driverManagerDialog.text.EditDriverClassName=Driver Class Name:
