update for use of export

--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -28,6 +28,25 @@ dtp.oda.adapter.jar=oda-adapter.jar
 oda.jdbc.jar=oda-jdbc.jar
 oda.flatfile.jar=oda-flatfile.jar
 birt.oda.jar=oda.jar
-bin.includes = META-INF/
 
+source.. = src/
+output.. = bin/
+bin.includes = plugin.xml,\
+               .options,\
+               META-INF/MANIFEST.MF,\
+               about.html,\
+               schema/aggregation.exsd,\
+               dte.jar,\
+               .,\
+src.includes = plugin.xml,\
+               about.html,\
+               .classpath,\
+               .options,\
+               .project,\
+               META-INF/MANIFEST.MF,\
+               build.properties,\
+               schema/aggregation.exsd,\
+               test/,\
+               src/,\
+               BuildData.xml
 
