--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
@@ -61,7 +61,7 @@
       </dataSourceUI>
        <dataSetUI id="org.eclipse.birt.report.data.oda.jdbc.JdbcSelectDataSet"
 		       		hasParameterDefinition = "true">
-		    <newDataSetWizard class="org.eclipse.datatools.connectivity.oda.design.ui.wizards.NewDataSetWizard"/>
+		    <dataSetWizard class="org.eclipse.datatools.connectivity.oda.design.ui.wizards.DataSetWizard"/>
             <dataSetPage
                   id="org.eclipse.birt.report.data.oda.jdbc.ui.dataset2"
                   wizardPageClass="org.eclipse.birt.report.data.oda.sampledb.ui.SampleDataSetEditor"
