[134920] Separate oda.design.ui extension point's dataSetUI definition for input vs output parameters

--- a/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.xml
@@ -58,9 +58,11 @@
                pageTitle="%wizard.data.source.page.title"
                windowTitle="%wizard.window.title"/>
       </dataSourceUI>
-      <dataSetUI id="org.eclipse.birt.report.data.oda.xml.dataSet"
-                 initialPageId="org.eclipse.datatools.connectivity.oda.design.ui1"
-                 hasParameterDefinition="false">
+      <dataSetUI
+            id="org.eclipse.birt.report.data.oda.xml.dataSet"
+            initialPageId="org.eclipse.datatools.connectivity.oda.design.ui1"
+            supportsInParameters="false"
+            supportsOutParameters="false">
             <dataSetWizard class="org.eclipse.datatools.connectivity.oda.design.ui.wizards.DataSetWizard"/>
             <dataSetPage
                   id="org.eclipse.datatools.connectivity.oda.design.ui1"
