--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -58,9 +58,11 @@
                pageTitle="%wizard.data.source.page.title"
                windowTitle="%wizard.window.title"/>
       </dataSourceUI>
-      <dataSetUI id="org.eclipse.birt.report.data.oda.jdbc.JdbcSelectDataSet"
-                 initialPageId="org.eclipse.birt.report.data.oda.jdbc.ui.dataset1"
-                 hasParameterDefinition="true">
+      <dataSetUI
+            id="org.eclipse.birt.report.data.oda.jdbc.JdbcSelectDataSet"
+            initialPageId="org.eclipse.birt.report.data.oda.jdbc.ui.dataset1"
+            supportsInParameters="true"
+            supportsOutParameters="false">
             <dataSetWizard class="org.eclipse.datatools.connectivity.oda.design.ui.wizards.DataSetWizard"/>
             <dataSetPage
                   id="org.eclipse.birt.report.data.oda.jdbc.ui.dataset1"
@@ -68,9 +70,11 @@
                   path="/"
                   displayName="%dataset.editor.page.query"/>
        </dataSetUI>
-       <dataSetUI id="org.eclipse.birt.report.data.oda.jdbc.SPSelectDataSet"
-                    initialPageId="org.eclipse.birt.report.data.oda.jdbc.ui.dataset2"
-		       		hasParameterDefinition = "true">
+       <dataSetUI
+             id="org.eclipse.birt.report.data.oda.jdbc.SPSelectDataSet"
+             initialPageId="org.eclipse.birt.report.data.oda.jdbc.ui.dataset2"
+             supportsInParameters="true"
+             supportsOutParameters="true">
 		    <dataSetWizard class="org.eclipse.datatools.connectivity.oda.design.ui.wizards.DataSetWizard"/>
             <dataSetPage
                   id="org.eclipse.birt.report.data.oda.jdbc.ui.dataset2"
