--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
@@ -59,8 +59,10 @@
                pageTitle="%wizard.data.source.page.title"
                windowTitle="%wizard.window.title"/>
       </dataSourceUI>
-       <dataSetUI id="org.eclipse.birt.report.data.oda.jdbc.JdbcSelectDataSet"
-		       		hasParameterDefinition = "true">
+       <dataSetUI
+             id="org.eclipse.birt.report.data.oda.jdbc.JdbcSelectDataSet"
+             supportsInParameters="true"
+             supportsOutParameters="false">
 		    <dataSetWizard class="org.eclipse.datatools.connectivity.oda.design.ui.wizards.DataSetWizard"/>
             <dataSetPage
                   id="org.eclipse.birt.report.data.oda.jdbc.ui.dataset2"
