add getOffset, readLong, readInt in RAInputStream, add getOffset, writeLong, writeInt into RAOutputStream

--- a/core/org.eclipse.birt.core/build.properties
+++ b/core/org.eclipse.birt.core/build.properties
@@ -20,3 +20,4 @@ src.includes = META-INF/,\
                src/,\
                test/,\
                BuildCore.xml,\
+jars.extra.classpath = lib/servlet.jar
