CheckIN:Fix bugzilla bug 136563 Shortcut key in query is clash

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -21,7 +21,7 @@ wizard.message.warning=Warning
 wizard.message.warning.invaliddatasource=The provided data source information is incomplete. Would you like to continue anyway?
 tablepage.label.Applyfilter=To display only relevant tables, use the filter.
 tablepage.label.selectTable=Select one or more tables, then click the ">" button to add them to the data set.
-tablepage.label.filter=&Filter:
+tablepage.label.filter=Filte&r:
 tablepage.label.refresh=Refreshing...
 tablepage.label.schema=&Schema:
 tablepage.button.filter=&Apply Filter
