--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.properties
@@ -21,8 +21,7 @@ dataset.editor.page.query=Query
 datasource.name=JDBC data source
 dataset.jdbcselect=SQL SELECT via JDBC
 datasource.editor.page.connection=Data source connection
-preference.externalEditor.title=External editor
-preference.datasetpreview=Data Set Editor
+preference.datasetpreview=JDBC Data Set
 
 plugin.name=BIRT JDBC UI Plug-in
 oda.data.source.name=BIRT JDBC Data Source
