--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -84,7 +84,7 @@
          point="org.eclipse.ui.preferencePages">
          <page
             class="org.eclipse.birt.report.data.oda.jdbc.ui.preference.DateSetPreferencePage"
-            category="org.eclipse.birt.report.designer.ui.preferences"
+            category="org.eclipse.birt.report.designer.ui.preferences.DateSetPreferencePage"
             name="%preference.datasetpreview"
             id="org.eclipse.birt.report.data.oda.jdbc.ui.preference.DateSetPreferencePage"/>
    </extension>
