--- a/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.properties
@@ -31,6 +31,7 @@ newwizard.description=Create an BIRT XML File connection profile
 wizard.window.title=New XML File Data Source Profile
 wizard.data.source.page.title=Define the URLs to the XML file and schema information
 profile.propertypage.name=BIRT XML File Data Source Connection Properties
+preference.datasetpreview=XML Data Set
 #
 #  Below NLS messages apply to all ODA data sources; should be re-factored
 #
