--- a/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.xml
@@ -79,4 +79,12 @@
                
        </dataSetUI>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+         <page
+            class="org.eclipse.birt.report.data.oda.xml.ui.preference.DateSetPreferencePage"
+            category="org.eclipse.birt.report.designer.ui.preferences.DateSetPreferencePage"
+            name="%preference.datasetpreview"
+            id="org.eclipse.birt.report.data.oda.xml.ui.preference.DateSetPreferencePage"/>
+   </extension>
 </plugin>
