Fixed bugzilla bug  136939 Bad heading on dialog box Edit Data Source

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -49,8 +49,8 @@ wizard.label.search=Search:
 wizard.label.filter=Filter:
 tablepage.label.selecttype=&Type:
 tablepage.filter.warning=Please specify a filter.
-wizard.message.createDataSource=Create a new data source.
-wizard.message.editDataSource=Edit the selected data source.
+wizard.message.createDataSource=Create a new data source
+wizard.message.editDataSource=Edit the selected data source
 error.emptyDatasourceName=Data source name must not be empty.
 error.upgradingConnection=Error upgrading JDBC connection information.
 error.duplicateName=The new name is a duplicate of an existing name in the same name space.
