Fix bugzilla bug 125906 "JDBC Data source" is not displayed in localized langauge.

--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.properties
@@ -13,6 +13,8 @@
 ###############################################################################
 # NLS String
 ###############################################################################
+datasource.name=JDBC Data Source
+
 datasource.property.odaDriverClass=JDBC Driver Class
 datasource.property.odaURL=JDBC Driver URL
 datasource.property.odaDataSource=Data Source
