--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
@@ -9,7 +9,7 @@
       <dataSource
             odaVersion="3.0"
             driverClass="org.eclipse.birt.report.data.oda.jdbc.OdaJdbcDriver"
-            defaultDisplayName="JDBC Data Source"
+            defaultDisplayName="%datasource.name"
             setThreadContextClassLoader="false"
             id="org.eclipse.birt.report.data.oda.jdbc">
          <properties>
