CheckIn:Fix bugzilla bug  125931 "SQL Select Query" on New Data Set dialog is not externalized.

--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.properties
@@ -21,4 +21,6 @@ datasource.property.odaDataSource=Data Source
 datasource.property.odaUser=User Name
 datasource.property.odaPassword=Password
 
+dataset.query.sqltype=SQL Select Query
+dataset.query.sptype=SQL Stored Procedure Query
 dataset.property.queryTimeOut=Query Time Out (in seconds)
