--- a/common/org.w3c.sac/build.properties
+++ b/common/org.w3c.sac/build.properties
@@ -1,1 +1,8 @@
-bin.includes = META-INF/
+bin.includes = META-INF/,\
+               about.html,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               about_files/,\
+               eclipse32.gif,\
+               lib/
