--- a/common/org.w3c.sac/build.xml
+++ b/common/org.w3c.sac/build.xml
@@ -88,6 +88,31 @@
 				<exclude name="build.properties" />
 			</fileset>
 		</copy>
+		<tstamp>
+			<format property="TODAY" pattern="yyyyMMddHHmm" />
+		</tstamp>
+		<copy todir="${export.dir}/${module.name}_${Bundle-Version}" overwrite="true">
+			<fileset dir=".">
+				<include name="about.mappings" />
+			</fileset>
+			<filterchain>
+				<replacetokens>
+					<token key="Replace_By_Date" value="${TODAY}" />
+				</replacetokens>
+			</filterchain>
+
+		</copy>
+		<copy todir="${export.dir}/${module.name}_${Bundle-Version}" overwrite="true">
+			<fileset dir=".">
+				<include name="about.properties" />
+			</fileset>
+			<filterchain>
+				<replacetokens>
+					<token key="Replace_By_Version" value="${Bundle-Version}" />
+				</replacetokens>
+			</filterchain>
+
+		</copy>
 	</target>
 
 	<target name="UnitTest">
