Multiple enhancements in Model source.

--- a/model/org.eclipse.birt.report.model/plugin.xml
+++ b/model/org.eclipse.birt.report.model/plugin.xml
@@ -3,4 +3,11 @@
 <plugin>
      <extension-point id="reportItemModel" name="reportItemModel" schema="schema/reportItem.exsd"/>
    <extension-point id="encryptionHelper" name="encryptionHelper" schema="schema/encryptionHelper.exsd"/>
+	
+   <extension
+         id="DesignEngineFactory"
+         name="DesignEngineFactory"
+         point="org.eclipse.birt.core.FactoryService">
+      <factory class="org.eclipse.birt.report.model.api.DesignEngineFactory"/>
+   </extension>
 </plugin>
