Update plugin.xml in OSGI standard

--- a/testsuites/org.eclipse.birt.report.tests.model/build.properties
+++ b/testsuites/org.eclipse.birt.report.tests.model/build.properties
@@ -1,4 +1,21 @@
-source.model.jar = src/
-output.model.jar = bin/
-bin.includes = plugin.xml,\
-               model.jar
+source.. = src/
+output.. = bin/
+bin.includes = META-INF/MANIFEST.MF,\
+               .options,\
+               about.html,\
+               about_files/,\
+               .,\
+               plugin.xml
+
+src.includes = .classpath,\
+               .options,\
+               .project,\
+               schema/,\
+               test.xml,\
+               META-INF/MANIFEST.MF,\
+               about.html,\
+               about_files/,\
+               build.properties,\
+               plugin.xml,\
+               src/
+
